# ItsukiBotAtConfluence

./: README.md
cdk/: cdk.json  package-lock.json  package.json
cdk/lib/: handler-stack.ts
lambdas/: Cargo.toml
lambdas/daily_data_sync_handler/: Cargo.toml
lambdas/daily_data_sync_handler/src/: main.rs
lambdas/lib/: Cargo.toml
lambdas/lib/src/: env_keys.rs  lib.rs
lambdas/lib/src/service/: mod.rs  slack_service.rs  sqs_service.rs
lambdas/lib/src/service/bedrock_service/: mod.rs
lambdas/receive_handler/: Cargo.toml
lambdas/receive_handler/src/: handlers.rs  main.rs
lambdas/sqs_handler/: Cargo.toml
lambdas/sqs_handler/src/: main.rs
