[package]
name = "daily_data_sync_handler"
version = "0.1.0"
edition = "2021"

[package.metadata.lambda.env]

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
aws_lambda_events = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
aws-config = { workspace = true }
lambda_runtime = { workspace = true }

#shared lib
lib = { path = "../lib" }