[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
aws-config = { workspace = true }
aws-smithy-types = { workspace = true }
aws_lambda_events = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
uuid =  { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }

aws-sdk-bedrockagentruntime = "1.108.0"
aws-sdk-bedrockagent = "1.112.0"
aws-sdk-sqs = "1.3.0"
reqwest = "0.12.8"
openssl = { version = "0.10.35", features = ["vendored"] }
rand = "0.8.5"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
