[package]
name = "receive_handler"
version = "0.1.0"
edition = "2021"

[package.metadata.lambda.env]

[dependencies]
anyhow = { workspace = true }
aws-config = { workspace = true }
aws-smithy-types = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
uuid =  { workspace = true }
axum = { workspace = true }

# package only
lambda_http = "0.13.0"
regex = "1.10.6"
urlencoding = "2.1.3"

# shared library
lib = { path = "../lib" }
